--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,10 +4,10 @@ one:
   given_name: MyString
   family_name: MyString
   email: MyString
-  preferred_timezone: MyString
+  preferred_timezone: 'America/Santo_Domingo'
 
 two:
   given_name: MyString
   family_name: MyString
   email: MyString
-  preferred_timezone: MyString
+  preferred_timezone: America/Africa
